--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Hello my name is Tharun Saravanakumar and I'm an aspiring filmmaker and this is my resume">
+  <meta name="author" content="862274786">
 
-  <title>John Doe - Business Administration</title>
+  <title>Tharun Saravanakumar - Film, Theatre and Digital Production Major</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/tharunsaravanakumar.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,27 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Tharun Saravanakumar
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Film, Theatre and digital Production Major</div>
+        <p class="lead mb-4">Hello my name is Tharun Saravanakumar and I'm a film, television, theatre and digital production major. Ever since I was a child I dreamed of wanted to be apart of the creation of films. Whether that be acting, directing or writing, I wanted to do it all. To me filmmaking is the greatest art form as it encompasses pictoral, musical, sound, acting and language all togather to make one heck of an expereince.<br><br>
 
-        Enter bio here<br><br>
+        I've made a feature length crime film called Ruffians. This film was made the summer right after high school and right before freshman year of college. After that I worked on another project in the following summer which was a short film crime story. I followed that up with another short film but this time it was a drama. All of these projects have been leading up the current project I'm working on right now.<br><br>
 
-        Enter bio here
+         The film I'm working on right now has the scale and scope of my first feature film, the sharp and intense nature of my first short film and the dramatic weight of my second short film. The current project I'm working on is called "Far From the Grove" and revolves around the many perspectives and the multifacted nature of the crimanal drug underworld and how that affects innocent people who fall into a life of drug abuse.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/tharun_saravanakumar/">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
-            <i class="fab fa-github"></i>
+          <a target="_blank" id="socialicon-2" href="https://www.youtube.com/channel/UCHhJ-3zUfoc21-kNg0huW5g">
+            <i class="fab fa-youtube"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/home">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
-            <i class="fa fa-envelope"></i>
+          <a target="_blank" id="socialicon-4" href="https://letterboxd.com/TharunS123/">
+            <i class="fa fa-letterboxd"></i>
           </a>
         </div>
       </div>
@@ -92,12 +92,12 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Student Employee</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Glasgow Residential Restaurant</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Cleaned, rinsed, loaded, unloaded and restocked dishes<br> 
+              • Tables and floor care<br>
+              • Preparing, restocking and serving food<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,11 +107,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Apache News Broadcast</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Arcadia High School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Writing and Editing<br>
+              • Videogrpahy and journalism<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,13 +122,13 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Creative</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">SYNRG Media</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Acting<br>
+            • Writing<br>
+            • Directing<br>
+            • Editing<br>
 
           </p>
           </div>
@@ -148,41 +148,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Current Film Major student</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2025</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +167,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Image 1.jpeg" width="500px">
+            <img src="img/Image 2.jpeg" width="500px"><br>
+            <img src="img/Image 3.jpeg" width="500px">
+            <img src="img/Image 4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +178,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Tharun Saravanakumar</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
